Tue Jan  7 10:16:02 2014  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 21e409d / RubyGems 2.2.1.

	  See http://rubygems.rubyforge.org/rubygems-update/History_txt.html
	  for a list of bug fixes.

	* test/rubygems:  ditto.

Tue Jan  7 10:10:46 2014  Eric Wong <e@80x24.org>

	* ext/json/generator/depend: add build dependencies for json extension
	  [Bug #9374] [ruby-core:59609]
	* ext/json/parser/depend: ditto

Tue Jan  7 04:35:46 2014  Aman Gupta <ruby@tmm1.net>

	* array.c (ary_add_hash): Fix consistency issue between Array#uniq and
	  Array#uniq! [Bug #9340] [ruby-core:59457]
	* test/ruby/test_array.rb (class TestArray): regression test for above.

Mon Jan  6 21:28:48 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* .gitignore: ignore *-fake.rb generated even when CROSS_COMPILING = no
	  since r42862.

Sun Jan  5 20:14:14 2014  Benoit Daloze  <eregontp@gmail.com>

	* compar.c (cmp_equal): remove error hiding in Comparable#==.
	  Comparable#== no longer rescues exceptions silently.
	  This was the cause of quite a couple bugs. See #7688. [EXPERIMENTAL]

	* test/ruby/test_comparable.rb: adapt assertion to match new behavior.

	* lib/rdoc/method_attr.rb: fix bugs discovered by this change.

	* test/rdoc/test_rdoc_normal_class.rb: fix bugs in tests.

Sat Jan  4 22:44:00 2014  Charlie Somerville  <charliesome@ruby-lang.org>

	* struct.c (rb_struct_set): return assigned value from setter method
	  rather than struct object. [Bug #9353] [ruby-core:59509]

	* test/ruby/test_struct.rb (test_setter_method_returns_value): add test

Sat Jan  4 21:44:31 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_gc.rb (TestGc#test_latest_gc_info): use
	  GC.stat(:key) instead of GC.stat.

Sat Jan  4 19:15:29 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/socket.c (rsock_syserr_fail_host_port): use format flags,
	  '+' to inspect, ' ' to quote unprintables.

	* ext/socket/socket.c (rsock_syserr_fail_path): ditto.
